[gd_scene load_steps=2 format=3 uid="uid://bvt8h4xqk3m1s"]

[ext_resource type="Script" uid="uid://dqf0rav2c6y7b" path="res://UIs/lobby_ui.gd" id="1_lobby_script"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_lobby_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Preparation"
horizontal_alignment = 1

[node name="NetworkSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DisconnectButton" type="Button" parent="VBoxContainer/NetworkSection"]
layout_mode = 2
text = "Disconnect"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Not connected"
horizontal_alignment = 1

[node name="ClassSelection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ClassTitle" type="Label" parent="VBoxContainer/ClassSelection"]
layout_mode = 2
text = "Select Your Class:"
horizontal_alignment = 1

[node name="KnightSection" type="HBoxContainer" parent="VBoxContainer/ClassSelection"]
layout_mode = 2

[node name="KnightButton" type="Button" parent="VBoxContainer/ClassSelection/KnightSection"]
layout_mode = 2
size_flags_horizontal = 3
text = "Knight"

[node name="KnightLevel" type="Label" parent="VBoxContainer/ClassSelection/KnightSection"]
layout_mode = 2
text = "Level 1"

[node name="RangerSection" type="HBoxContainer" parent="VBoxContainer/ClassSelection"]
layout_mode = 2

[node name="RangerButton" type="Button" parent="VBoxContainer/ClassSelection/RangerSection"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ranger"

[node name="RangerLevel" type="Label" parent="VBoxContainer/ClassSelection/RangerSection"]
layout_mode = 2
text = "Level 1"

[node name="PyromancerSection" type="HBoxContainer" parent="VBoxContainer/ClassSelection"]
layout_mode = 2

[node name="PyromancerButton" type="Button" parent="VBoxContainer/ClassSelection/PyromancerSection"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pyromancer"

[node name="PyromancerLevel" type="Label" parent="VBoxContainer/ClassSelection/PyromancerSection"]
layout_mode = 2
text = "Level 1"

[node name="AssassinSection" type="HBoxContainer" parent="VBoxContainer/ClassSelection"]
layout_mode = 2

[node name="AssassinButton" type="Button" parent="VBoxContainer/ClassSelection/AssassinSection"]
layout_mode = 2
size_flags_horizontal = 3
text = "Assassin"

[node name="AssassinLevel" type="Label" parent="VBoxContainer/ClassSelection/AssassinSection"]
layout_mode = 2
text = "Level 1"

[node name="PlayersSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayersTitle" type="Label" parent="VBoxContainer/PlayersSection"]
layout_mode = 2
text = "Connected Players:"
horizontal_alignment = 1

[node name="PlayersList" type="VBoxContainer" parent="VBoxContainer/PlayersSection"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Run"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Main Menu" 